# deno-wasm

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  ait.toml  composer.json  deno.json  drizzle.config.ts  go.mod  go.sum  go.wasm  go_test.ts  kitledger.code-workspace  main.go  main.ts  package-lock.json  package.json  postcss.config.cjs  python.py  python_test.js  python_test.ts  ruby.rb  ruby_test.ts  rust.wasm  rust_test.ts  script.wat  test.sh  test_file.txt  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.mts  wasm.go  wasm_env.ts  wat.wasm  wat_test.ts
.drizzle/: 0000_swift_jack_murdock.sql
api/: index.ts
bootstrap/: app.php  providers.php
cmd/: generate_token.go  root.go  serve.go
config/: app.php  database.php  sanctum.php  services.php
decisions/: 001_data_types_for_monetary_values.md  002_account_balance_calculation_strategy.md  __template.md
docs/: authentication.md  concepts.md  environment.md  pitch.md
lang/: en.json  es.json
migrations/: 0000_damp_marrow.sql  0000_dear_barracuda.sql  0000_equal_terror.sql  0000_fresh_colonel_america.sql  0000_high_mystique.sql  0000_oval_meggan.sql  0000_small_callisto.sql  0000_windy_hellfire_club.sql  0001_workable_sally_floyd.sql  20250616181347_initial_tables.down.sql  20250616181347_initial_tables.up.sql  20250616183220_initial_validation_triggers.down.sql
platform/: index.ts
routes/: api.php  web.php
scripts/: test-auth.sh
src/: config.rs  enums.rs  index.ts  main.rs  main.ts  models.rs  router.rs  router.ts  server.ts
wasm/: Cargo.toml
web/: biome.json  package-lock.json  package.json  vite.config.ts
(+362 files in other folders)
