[package]
name = "kitledger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-server = "0.7.2"
dotenvy = "0.15.7"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "json"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "net", "time"]}
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = {version = "1.17.0", features = ["v7", "serde"]}
validator = {version = "0.20.0", features = ["derive"]}
